# s7

./: .bazelrc  BUILD.bazel  Makefile  README.adoc  README.md  WORKSPACE.bazel
demos/: BUILD.bazel  bazel.c  bazel.h  driver.c  load.c  load.h  load.scm  test1.c
demos/cstruct/: BUILD.bazel  cstruct.c  cstruct.h  cstruct.scm  cstruct_s7.c  cstruct_s7.h  driver.c
demos/logc/: BUILD.bazel
man/: install.sh
man/man3/: s7-iterators.3  s7-let-temporarily.3  s7-with-*.3  s7-with-baffle.3  s7_booleans.3  s7_c_constants.3  s7_c_copy.3  s7_c_debug.3  s7_c_dilambda.3  s7_c_equality.3  s7_c_errors.3  s7_c_eval.3  s7_c_features.3  s7_c_functions.3  s7_c_hash_tables.3  s7_c_hooks.3  s7_c_iterators.3  s7_c_keywords.3  s7_c_lists.3  s7_c_macros.3  s7_c_memory.3  s7_c_nulls.3  s7_c_numbers.3  s7_c_objects.3  s7_c_pairs.3  s7_c_pointers.3  s7_c_ports.3  s7_c_repl.3  s7_c_strings.3  s7_c_symbols.3  s7_c_types.3  s7_c_variables.3  s7_c_with.3  s7_c_with_environment.3  s7_characters.3  s7_datatypes.3  s7_debugging.3  s7_define.3  s7_define_function.3  s7_dilambda.3  (+23 more)
man/man5/: s7_globals.5
man/man7/: s7_ffi.7
s7/: BUILD.bazel  Makefile  libutf8proc_s7.c  repl_dumb_dynamic.c  repl_dumb_static.c  s7.c
src/: BUILD.bazel
test/: BUILD.bazel  s7_test.c
test/g_block/: BUILD.bazel  g_block.c  g_block.scm  libg_block.c  libg_block.h  test.scm
