# load("@rules_cc//cc:defs.bzl", "cc_binary")

filegroup(
    name = "scm",
    data = glob(["*.scm"])
)

###########
cc_library(
    name  = "s7",
    # linkstatic = 0,
    srcs  = ["s7.c", "mus-config.h"],
    hdrs  = ["s7.h"],
    copts = select({
        # "//:macos": [
        #     "-std=c11"
        #     # -fsanitize=address
        #     # -lasan
        #     # -fsanitize=bounds
        # ],
        # "//:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        # "-pedantic-errors",
        # "-Wextra",
        "-I$(GENDIR)/s7"
    ],
    data = glob(["*.scm"]) + ["s7.h"],
    defines = [
        # "WITH_MAIN"
        "WITH_C_LOADER",
    ],
    linkopts = select({
        # "//:macos": ["-std=c11"],
        # "//:linux": ["-std=gnu11"],
        "//conditions:default": []
    }) + ["-lm"],
    visibility = ["//visibility:public"]
)

##########
## linux: gcc -o repl repl.c s7.o -Wl,-export-dynamic -lm -I. -ldl
cc_binary(
    name  = "repl",
    srcs  = ["repl.c", "mus-config.h"],
    copts = select({
        # "//:bsd": ["-std=c11"],
        "//:macos": ["-std=c11"],
        "//:linux": [
            "-std=c11",
            "-Wl,export-dynamic",
            ],
        # "//:linux_clang": [
        #     "-std=c11",
        #     "-fPIC",
        #     "-Wl,export-dynamic",
        #     ],
        "//conditions:default": ["-std=c11"],
    }) + [
        # "-pedantic-errors",
        # "-Wextra",
        "-O2", "-g",
        "-I.",
        "-I$(GENDIR)/s7"
    ],
    data = [":scm"],
    deps = [":s7"], ## ":c_s7"],
    linkopts = select({
        # "//:bsd": ["-Wl,-export-dynamic"],
        "//:macos": [],
        "//:linux": ["-ldl", "-Wl,-export-dynamic"],
        # "//:linux_clang": ["-ldl", "-Wl,-export-dynamic"],
        "//conditions:default": []
    }) + [
        "-lm",
    ],
    visibility = ["//visibility:public"]
)

genrule(
    name = "mus-config",
    outs = ["mus-config.h"],
    cmd = "touch $@"
)


cc_binary(
    name  = "c_s7",  # create libc_s7
    linkshared = True,
    srcs  = ["libc_s7.c", "s7.h"],
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-Wextra",
        "-Wno-unused-parameter",
        # "-Ivendored/linenoise",
        "-O2", "-g",
        "-Isrc",
        "-Ivendored/linenoise",
    ],
    defines = [
        "WITH_SYSTEM_EXTRAS"
    ],
    linkopts = select({
        "//bzl/host:macos": [],
        "//bzl/host:linux": ["-ldl", "-Wl,-export-dynamic"],
        "//conditions:default": []
    }) + [
        "-lm"
    ],
    visibility = ["//visibility:public"]
)

##########
## nrepl depends on notcurses, which is yet another big hairy lib

# deps: libdeflate-dev libncurses-dev libunistring-dev

# libgpm: general purpose mouse GPL v2

# multimedia support: libavformat-dev libavutil-dev libswscale-dev
# qrcode support:  libqrcodegen-dev
# other stuff we don't need:  install build-essential cmake doctest-dev pandoc pkg-config
# GPL: libgpm-dev

# cc_binary(
#     name  = "nrepl",
#     srcs  = ["nrepl.c", "notcurses_s7.c", "s7.h"],
#     deps = [
#         ":s7"
#     ],
#     visibility = ["//visibility:public"]
# )
