load("@rules_cc//cc:defs.bzl", "cc_library")

cc_test(
    name = "test",
    srcs = ["s7_test.c"],
    copts = [
        "-Wall",
        "-Wextra",
        "-Werror=pedantic",
        "-Wno-unused-parameter",
        "-Wno-format-pedantic",

        "-Is7",
        "-Iexternal/s7/s7",

        "-Ivendored/gopt",
        "-Iexternal/s7/vendored/gopt",

        "-Ivendored/logc",
        "-Iexternal/s7/vendored/logc",

        "-Ivendored/unity",
        "-Iexternal/s7/vendored/unity",

        "-Ivendored/uthash",
        "-Iexternal/s7/vendored/uthash",

    ] + select({
        "//:macos": [
            "-Wno-gnu",
            "-std=c11"
        ],
        "//:linux": [
            "-std=gnu11",
            "-Wpedantic-errors",
        ],
        "//conditions:default": ["-std=c11"],
    }),
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE"],
        "//conditions:default":   []
    }) + select({
        "//bzl/host:linux": [
            "_XOPEN_SOURCE=500", # strdup
            "_DEFAULT_SOURCE"    # dirent DT_* macros
        ],
        "//conditions:default":   []
    }),
    deps = [
        "//s7:s7",
        "//vendored/gopt",
        "//vendored/logc",
        "//vendored/unity",
        "//vendored/uthash",
    ],
    timeout = "short",
    visibility = ["//test:__subpackages__"]
)
