load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name  = "driver",
    linkstatic = 1,
    srcs  = [
        "driver.c",
        "cstruct.h",
    ],
    data = glob(["*.scm"]),
    copts = [
        "-std=c11",
        "-pedantic-errors",
        # "-I.",
        "-Idemos/cstruct",
        "-Idemos/logc",
        "-Is7"
    ],
    deps = [
        "//demos:bazel",
        "//demos/cstruct",
        "//demos/logc",
        "//s7",
    ],
)

cc_library(
    name  = "cstruct",
    linkstatic = 1,
    srcs  = ["cstruct.c", "cstruct_s7.h"],
    hdrs = ["cstruct.h"],
    data = ["cstruct.scm"],
    copts = [
        "-std=c11",
        "-I.",
        # "-Idemos/cstruct",
        "-Idemos/logc",
        "-Is7"
   ],
    deps = [
        "//demos/cstruct:cstruct_s7",
        "//demos/logc"
    ],
)

cc_library(
    name  = "cstruct_s7",
    linkstatic = 1,
    srcs  = [
        "cstruct_s7.c",
        "cstruct.h"
    ],
    # data = ["cstruct.scm"],
    copts = [
        "-std=c11",
        "-pedantic-errors",
        # "-Werror=int-conversion",
        "-Idemos/logc",
        "-Is7"
    ],
    defines = ["DEBUG_TRACE"],
    deps = [
        "//demos/logc",
        "//s7"
    ],
)
